# crab-rays

./: .gitignore  Cargo.toml  README.md
ida-sdk/: Cargo.toml
ida-sdk-sys/: Cargo.toml  build.rs
ida-sdk-sys/src/: lib.rs
ida-sdk-sys/src/shim/: constants_check.cpp  insn_helpers.hpp  ldr_helpers.hpp  procmod_bridge.cpp  procmod_bridge.hpp
ida-sdk/src/: insn.rs  lib.rs  loader.rs  op.rs  outctx.rs  procmod.rs
loader/: Cargo.toml
procmod/: Cargo.toml
procmod/src/: lib.rs
sbf/: Cargo.toml
sbf/src/: ana.rs  decode.rs  emu.rs  ldsc.rs  lib.rs  lph.rs  out.rs
